fixing alignment issue with tree item expander

--- a/src/Components/Common/Items/TreeItem.less
+++ b/src/Components/Common/Items/TreeItem.less
@@ -13,6 +13,7 @@
     & > .TreeItem-Indent,
     & > .btn,
     & > .TreeItem-Expander {
+      text-align: center;
       width: @button-height;
     }
   }
